--- a/partner.html
+++ b/partner.html
@@ -64,7 +64,7 @@
     // --- 1. CONFIGURATION ---
     const firebaseConfig = {
         apiKey: "AIzaSyCmqBL6a0muExq2qBsSR6M3C_8AyXcJ2k8",
-        authDomain: "urbanpaintpro.in", // Updated Domain
+        authDomain: "urban-paint-pro.firebaseapp.com", // Updated Domain
         databaseURL: "https://urban-paint-pro-default-rtdb.asia-southeast1.firebasedatabase.app/",
         projectId: "urban-paint-pro",
         storageBucket: "urban-paint-pro.firebasestorage.app",
