--- a/index.html
+++ b/index.html
@@ -2140,7 +2140,7 @@
  // Razorpay Options
  var options = {
  // 🔥 IMP: Yahan apni puri Key ID paste karein (Dashboard se copy karke)
- "key": "rzp_test_SDEMypFMhovnYY", 
+ "key": "rzp_live_SDPY6guf8rfUr4", 
  
  "amount": 49.00, // ₹49.00 (in paise)
  "currency": "INR",
@@ -2679,7 +2679,7 @@
      setTimeout(() => closeCustomAlert(), 1500); // 1.5 sec baad loading band
      
      var options = {
-     "key": "rzp_test_SDEMypFMhovnYY", // 🔴 APNI KEY DALEIN
+     "key": "rzp_live_SDPY6guf8rfUr4", // 🔴 APNI KEY DALEIN
      "amount": price * 100,
      "currency": "INR",
      "name": "UrbanPaintPro",
@@ -2738,7 +2738,7 @@
        
        // 3. Razorpay Options
        var options = {
-       "key": "rzp_test_SDEMypFMhovnYY", // 🔴 Yahan apni Key ID dalein (Example: rzp_test_12345)
+       "key": "rzp_live_SDPY6guf8rfUr4", // 🔴 Yahan apni Key ID dalein (Example: rzp_test_12345)
        "amount": price * 100, // Amount in paise
        "currency": "INR",
        "name": "UrbanPaintPro",
