--- a/checkout.html
+++ b/checkout.html
@@ -332,7 +332,7 @@
             }
         }
 
-        // --- 6. ORDER PROCESSING ---
+                // --- 6. ORDER PROCESSING (FIXED) ---
         async function processOrder() {
             const user = auth.currentUser;
             if(!user) return alert("Please Login first!");
@@ -354,6 +354,9 @@
                     date: document.getElementById('serviceDate').value,
                     time: selectedSlotTime
                 },
+                // 🔥 FIX: Price ko 'amount' naam se save kar rahe hain
+                amount: orderData.total, 
+                
                 paymentMethod: paymentMethod,
                 paymentStatus: 'pending',
                 status: 'pending',
@@ -361,10 +364,8 @@
             };
 
             if (paymentMethod === 'cod') {
-                // Save directly for COD
                 saveOrderToFirebase(fullOrder);
             } else {
-                // Open Razorpay
                 openRazorpay(fullOrder);
             }
         }
@@ -374,7 +375,7 @@
                 "key": "rzp_live_SDPY6guf8rfUr4", // YOUR LIVE KEY
                 "amount": orderData.total * 100, // Amount in paise
                 "currency": "INR",
-                "name": "UrbanPaintPro",
+                "name": "HomePainting",
                 "description": orderData.service,
                 "image": "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
                 "handler": function (response){
