--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#0D9488">
-    <title>UrbanPaintPro | Home</title>
+    <title>Refine Home Painting | Home</title>
     
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
@@ -103,13 +103,13 @@
 
     <div id="initial-loader">
         <div class="spinner"></div>
-        <h3 style="color: var(--p);">UrbanPaintPro</h3>
+        <h3 style="color: var(--p);">Refine Home Painting</h3>
     </div>
 
     <div id="toast" class="toast"></div>
 
     <div id="login-layer">
-        <h2 style="color: var(--p); margin-bottom: 5px;">UrbanPaintPro</h2>
+        <h2 style="color: var(--p); margin-bottom: 5px;">Refine Home Painting</h2>
         <p style="color: #64748B; margin-bottom: 30px;">Login to continue</p>
 
         <div class="auth-card">
@@ -145,12 +145,12 @@
 
     <div id="main-app">
         <div class="header">
-            <div style="font-weight: 800; font-size: 1.2rem; color: var(--p);">UrbanPaintPro</div>
+            <div style="font-weight: 800; font-size: 1.2rem; color: var(--p);">Refine Home Painting</div>
             <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width: 35px; height: 35px; border-radius: 50%;" onclick="window.location.href='about.html'">
         </div>
 
         <div class="hero">
-            <h1 id="greeting">Namaste! 🙏</h1>
+            <h1 id="greeting">Hello! 🙏</h1>
             <p>What help do you need?</p>
         </div>
 
@@ -168,19 +168,19 @@
             <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px;">
                 <div class="mini-card" onclick="goToService('painting')">
                     <div class="mini-icon p-bg"><i class="fa-solid fa-paint-roller"></i></div>
-                    <div class="mini-name">Paint</div>
+                    <div class="mini-name">Painting</div>
                 </div>
                 <div class="mini-card" onclick="goToService('carpenter')">
                     <div class="mini-icon c-bg"><i class="fa-solid fa-hammer"></i></div>
-                    <div class="mini-name">Wood</div>
+                    <div class="mini-name">Carpenter</div>
                 </div>
                 <div class="mini-card" onclick="goToService('ac')">
                     <div class="mini-icon a-bg"><i class="fa-solid fa-snowflake"></i></div>
-                    <div class="mini-name">AC</div>
+                    <div class="mini-name">AC Repair</div>
                 </div>
                 <div class="mini-card" onclick="goToService('cleaning')">
                     <div class="mini-icon cl-bg"><i class="fa-solid fa-broom"></i></div>
-                    <div class="mini-name">Clean</div>
+                    <div class="mini-name">Cleaning</div>
                 </div>
                 <div class="mini-card" onclick="goToService('plumber')">
                     <div class="mini-icon pl-bg"><i class="fa-solid fa-faucet-drip"></i></div>
@@ -188,15 +188,15 @@
                 </div>
                 <div class="mini-card" onclick="goToService('electrician')">
                     <div class="mini-icon el-bg"><i class="fa-solid fa-bolt"></i></div>
-                    <div class="mini-name">Electric</div>
+                    <div class="mini-name">Electrician</div>
                 </div>
                 <div class="mini-card" onclick="goToService('waterproofing')">
                     <div class="mini-icon wa-bg"><i class="fa-solid fa-cloud-showers-heavy"></i></div>
-                    <div class="mini-name">Proofing</div>
+                    <div class="mini-name">Water proofing</div>
                 </div>
                 <div class="mini-card" onclick="goToService('pest')">
                     <div class="mini-icon pe-bg"><i class="fa-solid fa-bug"></i></div>
-                    <div class="mini-name">Pest</div>
+                    <div class="mini-name">Pest Control</div>
                 </div>
             </div>
         </div>
