--- a/bookings.html
+++ b/bookings.html
@@ -1107,28 +1107,33 @@
             // 2. Magic Line: Ek unique ID banao
             const newOrderKey = db.ref().child('orders').push().key;
 
-            // 3. Dono jagah save karo (Ek sath)
-            const updates = {};
-            updates[`/orders/${newOrderKey}`] = newOrder; // Public Orders Node (Partner ke liye)
-            updates[`/users/${auth.currentUser.uid}/orders/${newOrderKey}`] = newOrder; // Private User Node
-            
-            // Purana order complete mark karo (agar flow waisa hai)
-            if (activeId) {
-                updates[`/users/${auth.currentUser.uid}/orders/${activeId}/status`] = 'converted';
-            }
+            // 1. Unique ID banao
+const newOrderKey = db.ref().child('orders').push().key;
 
-            db.ref().update(updates, (error) => {
-                if (error) {
-                    showToast("Booking Failed: " + error.message, "error");
-                } else {
-                    closeSheet();
-                    showToast("Booking Successful! Partner notified.", "success");
-                    renderList();
-                }
-            });
-        }
-    });
+// 2. Updates Object (Maine Backticks hata kar simple tarika kar diya hai)
+const updates = {};
+
+// PUBLIC ORDER (Partner ke liye)
+updates['/orders/' + newOrderKey] = newOrder; 
+
+// PRIVATE ORDER (Customer ke liye)
+updates['/users/' + auth.currentUser.uid + '/orders/' + newOrderKey] = newOrder;
+
+// PURANA STATUS UPDATE
+if (activeId) {
+    updates['/users/' + auth.currentUser.uid + '/orders/' + activeId + '/status'] = 'converted';
 }
+
+// 3. Save karo
+db.ref().update(updates, (error) => {
+    if (error) {
+        showToast("Error: " + error.message, "error");
+    } else {
+        closeSheet();
+        showToast("Booking Successful!", "success");
+    }
+});
+
 
 
             showModal({
